Version 1.1-beta
- MVP to play Quiz Game.